--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
   <!-- Seccion #1 -->
   <section class="">
-    <nav class="navbar navbar-expand-lg navbar-light bg-purple mr-auto">
+    <nav class="navbar navbar-expand-lg navbar-light bg-purple mr-auto fixed-top">
       <div class="container">
         <a class="navbar-brand logo" href="#" style="color: #ffffff; font: size 40px;;">J</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -56,20 +56,58 @@
 
   <!-- Seccion #2 yo soy-->
 
-  <section>
-    <div class="contenedor_foto">
-      <img src="assets/img/blob.jpg" alt="" class="">
-    </div>
-    <div class="yo-soy">
-      <div>
-        <span class="texto1">Yo Soy</span>
+  <div>
+    <div class="container1-img">
+      <div class="texto">
+        <span class="borde-b">Yo soy</span>
       </div>
-      <div>
-        <span class="texto2">Johan</span>
+      <div class="nombre text-center">
+        <span class="">Johan</span>
+      </div>
+      <div class="img1" style="background-image: url('assets/img/me-img.JPG');"></div>
+    </div>
+  </div>
+
+
+
+
+  <!--Seccion #3 Sobre Mi -->
+  <section class="d-none d-sm-block d-none d-lg-block">
+    <h2 class="text-center txt">SOBRE MÍ</h2>
+    <div class="borde-n"></div>
+    <div class="parra text-center">
+      <div class="parra1">
+        <h2>¿Quieres saber un poco más?</h2>
+        <p> Hola mi nombre es Johan actualmente resido en Chile donde he aprendido un nuevo estilo de vida adaptandome a
+          todos los
+          criterios que se aplican en este bello país, en los últimos años me he dedicado a conocer el territorio
+          nacional me he
+          embarcado en muchas aventuras pero la nueva es ser desarrollador, poco a poco espero llegar a mi meta. En
+          Chile también aprendí
+          que las fechas patrias son fiestas muy representativas para mis compañeros chilenos incluso ¡más que las
+          navidades! pero
+          como yó soy un amante de comidas nuevas, comidas bien hechas lo he disfrutado mucho, me gusta viajar en
+          septiembre fuera de
+          Santiago pero este año 2020 ha sido muy peculiar y no podré hacerlo este año pero volveremos y seguiremos
+          conociendo más de Chile.</p>
+      </div>
+      <div class="parra1">
+        <h2>Lo que me gusta hacer</h2>
+        <p> Un poco más sobre quien soy... Tengo migrando casi 5 años viví en la hermosa Panamá de donde solo tengo
+          hermosos recuerdos
+          es una ciudad muy moderna con un estilo de vida muy diferente, su calor intenso que tanto odie ahora en estos
+          frios inviernos
+          lo llegue a extrañar. Soy de Venezuela un gran país con mucho que dar, haber viajado a otros paises me hizo
+          dar cuenta de la joya que perdimos pero recuperaremos.
+          Me gusta aventurarme en sitios naturales, me gusta la montaña, me encantan los deportes de pequeño tuve la
+          dicha y suerte de crecer en un sitio donde
+          se jugaban muchos deportes y logre destacarme en varios pero el futbol fue mi favorito y ha sido mi idioma
+          universal, soy un coleccionista
+          de canchas, si, de canchas no hay lugar donde haya ido y no me haya metido a jugar fútbol a pesar que algunas
+          veces ni hablen español.</p>
       </div>
     </div>
   </section>
-
   <!--Seccion #3 Mi Experiencia-->
 
   <section class="container">
@@ -79,56 +117,79 @@
         <div class="borde-n"></div>
       </span>
     </div>
-    <div class="container text-center text-white">
-      <img src="" alt="">logo
-      <p>Lorem ipsum dolor sit amet consectetur.</p>
+    <div class="row">
+      <div class="col-12">
+        <div class="container text-center text-white">
+          <i class="fas fa-desktop text-center fa-5x icon-cog my-5" style="color: blueviolet;"></i>
+          <h2 class="txt">Soporte técnico</h2>
+          <p class="parra2 d-none d-sm-block">Realicé esta actividad jornada de medio tiempo para un empresa de
+            servicios informaticos cuando estudiaba, me capacito para entender las estructuras
+            de una computadora a nivel hardware, el ensablado, cambios de piezas, mantenimietos preventivos, solución de
+            problemas en general, era ayudante del
+            instalador de servidores, allí aprendí un poco de cableado, conexiones cisco, protocolos de conxión ethernet
+            y WIFI fue una experiencia total de aprendizaje, deje de ser
+            ayudante y emepece a trabajar solo en el area por mi rápido aprendizaje del servicio prestado.
+          </p>
+        </div>
+      </div>
     </div>
-    <div class="container text-center text-white">
-      <img src="" alt="">logo
-      <p>Lorem ipsum dolor sit amet consectetur.</p>
+    <div class="row">
+      <div class="col-12">
+        <div class="container text-center text-white">
+          <i class="far fa-building fa-5x icon-cog my-5" style="color: blueviolet;"></i>
+          <h2 class="txt">Gestor de Ventas</h2>
+          <p class="parra2 d-none d-sm-block">Me desarrollé en el área de ventas de inmuebles donde cumplía el rol de
+            ayudar con el financiamiento para compra de apartamentos, documentación bancararia, estuduio
+            creditício de los clientes, genstión de documentación legal para la adqusición los apartamentos. Fue
+            experiencia nueva para mí a al cual me adapte dado que llegué a un
+            equipo de trabajo sólido con mucho tiempo experiencia y me puse a la par con ese equipo en el primer año de
+            trabajo que estuve allí.
+          </p>
+        </div>
+      </div>
     </div>
-  </section>
-
-  <!--Seccion #4 Mis Trabajos-->
-  <section class="container-fluid bg-purple">
-    <div class="text-center texto3">
-      <span>
-        MIS ÚLTIMOS <br> TRABAJOS
-        <div class="borde-b"></div>
-      </span>
-    </div>
-    <div class="container text-center my-5">
-      <div class="row">
-        <div class="col-12">
-          <div class="card-deck">
-            <div class="card box">
-              <a href="assets/proyectos/Meet & Coffe - final/index.html"><img src="assets/img/pa090700-copy1-2.webp"
-                  class="card-img-top img-fluid" alt="Meet & Coffe"></a>
-              <div class="card-body">
-                <h5 class="card-title">Meet & Coffe</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-                  content. This content is a little bit longer.</p>
+    <!--Seccion #4 Mis Trabajos-->
+    <section class="container-fluid bg-purple my-5">
+      <div class="text-center texto3">
+        <span>
+          MIS ÚLTIMOS <br> TRABAJOS
+          <div class="borde-b"></div>
+        </span>
+      </div>
+      <div class="container text-center my-5">
+        <div class="row">
+          <div class="col-12">
+            <div class="card-deck">
+              <div class="card box">
+                <a href="assets/proyectos/Meet & Coffe - final/index.html"><img src="assets/img/meet_coffee.png"
+                    class="card-img-top img-fluid" alt="Meet & Coffe"></a>
+                <div class="card-body">
+                  <h5 class="card-title">Meet & Coffe</h5>
+                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
+                    additional
+                    content. This content is a little bit longer.</p>
+                </div>
               </div>
-            </div>
 
-            <div class="card">
-              <a href="assets/proyectos/Iguana_page /index.html" target="_blank"><img
-                  src="assets/img/pa090700-copy1-2.webp" class="card-img-top img-fluid" alt="Iguana"></a>
-              <div class="card-body">
-                <h5 class="card-title">Iguana</h5>
-                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+              <div class="card box">
+                <a href="assets/proyectos/Iguana_page /index.html" target="_blank"><img src="assets/img/iguana_page.png"
+                    class="card-img-top img-fluid" alt="Iguana"></a>
+                <div class="card-body">
+                  <h5 class="card-title">Iguana</h5>
+                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.
+                  </p>
+                </div>
               </div>
-            </div>
 
-            <div class="card">
-              <a href="assets/proyectos/proyecto suricata/index.html" target="_blank"><img
-                  src="assets/img/pa090700-copy1-2.webp" class="card-img-top img-fluid" alt="Suricata"></a>
-              <div class="card-body">
-                <h5 class="card-title">Suricata</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                  content. This card has even longer content than the first to show that equal height action.</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+              <div class="card box">
+                <a href="assets/proyectos/proyecto suricata/index.html" target="_blank"><img
+                    src="assets/img/suricata.png" class="card-img-top img-fluid" alt="Suricata"></a>
+                <div class="card-body">
+                  <h5 class="card-title">Suricata</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                    additional
+                    content. This card has even longer content than the first to show that equal height action.</p>
+                </div>
               </div>
             </div>
 
@@ -137,8 +198,8 @@
                 <div class="col-12">
                   <div class="card-deck">
                     <div class="card box">
-                      <a href="assets/proyectos/Cupon/index.html" target="_blank"><img
-                          src="assets/img/pa090700-copy1-2.webp" class="card-img-top img-fluid" alt="Cupon"></a>
+                      <a href="assets/proyectos/Cupon/index.html" target="_blank"><img src="assets/img/cuppon.png"
+                          class="card-img-top img-fluid" alt="Cupon"></a>
                       <div class="card-body">
                         <h5 class="card-title">Cupon</h5>
                         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
@@ -147,27 +208,25 @@
                       </div>
                     </div>
 
-                    <div class="card">
-                      <a href="assets/proyectos/Ricomida/index.html" target="_blank"><img
-                          src="assets/img/pa090700-copy1-2.webp" class="card-img-top img-fluid" alt="Ricomida"></a>
+                    <div class="card box">
+                      <a href="assets/proyectos/Ricomida/index.html" target="_blank"><img src="assets/img/ricomida.png"
+                          class="card-img-top img-fluid" alt="Ricomida"></a>
                       <div class="card-body">
                         <h5 class="card-title">Ricomida</h5>
                         <p class="card-text">This card has supporting text below as a natural lead-in to additional
                           content.</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                       </div>
                     </div>
 
-                    <div class="card">
-                      <a href="assets/proyectos/Iguana_page /index.html" target="_blank"><img
-                          src="assets/img/pa090700-copy1-2.webp" class="card-img-top img-fluid" alt="..."></a>
+                    <div class="card box">
+                      <a href="assets/proyectos/Iguana_page /index.html" target="_blank"><img src="assets/img/dmark.png"
+                          class="card-img-top img-fluid" alt="..."></a>
                       <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                           additional
                           content. This card has even longer content than the first to show that equal height action.
                         </p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                       </div>
                     </div>
                   </div>
@@ -177,36 +236,55 @@
           </div>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <section class="container">
-    <div class="text-center texto4">
-      <span>
-        MI EXPERIENCIA
-        <div class="borde-n"></div>
-      </span>
-      <div class="form-group">
-        <label for="exampleFormControlTextarea1"></label>
-        <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Escribe tu pregunta acá" rows="3"></textarea>
+    <section class="container">
+        <div class="text-center texto4">
+          <span class="borde-n">
+              CONTACTAME
+              <div class="borde-n"></div>
+          </span>
+    </section>
+
+    <!-- typeform -->
+
+    <div class="container">
+      <div class="typeform-widget" data-url="https://form.typeform.com/to/hwHXGe90" style="width: 100%; height: 500px;">
       </div>
+      <script>
+        (function () {
+          var qs, js, q, s, d = document,
+            gi = d.getElementById,
+            ce = d.createElement,
+            gt = d.getElementsByTagName,
+            id = "typef_orm",
+            b = "https://embed.typeform.com/";
+          if (!gi.call(d, id)) {
+            js = ce.call(d, "script");
+            js.id = id;
+            js.src = b + "embed.js";
+            q = gt.call(d, "script")[0];
+            q.parentNode.insertBefore(js, q)
+          }
+        })()
+      </script>
+      <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;"> powered by <a
+          href="https://admin.typeform.com/signup?utm_campaign=hwHXGe90&utm_source=typeform.com-01EFW7D7VN1DE4WASJWBRW30CH-free&utm_medium=typeform&utm_content=typeform-embedded-poweredbytypeform&utm_term=ES"
+          style="color: #999" target="_blank">Typeform</a> </div>
     </div>
-    <div class="boton my-5">
-      <button type="button" class="btn btn-dark btn-lg">Comenzar</button>
-    </div>
-  </section>
 
-  <footer class="bg-purple text-center">
-    <div>
-      <span class="texto2">Johan</span>
-    </div>
-    <div class="text-white">
-      <a href="https://github.com"><i class="fab fa-github-square fa-4x icon-cog" style="color:#ffffff"></i> </a>
-      <a href="https://twitter.com"><i class="fab fa-twitter-square fa-4x icon-cog" style="color:#ffffff"></i></a>
-      <a href="https://www.linkedin.com"><i class="fab fa-linkedin fa-4x icon-cog" style="color:#ffffff"></i></a>
-      <a href="https://www.facebook.com"><i class="fab fa-facebook-square fa-4x icon-cog" style="color:#ffffff"></i></a>
-    </div>
-  </footer>
+    <footer class="bg-purple text-center">
+      <div>
+        <span class="texto2">Johan</span>
+      </div>
+      <div class="text-white">
+        <a href="https://github.com"><i class="fab fa-github-square fa-4x icon-cog" style="color:#ffffff"></i> </a>
+        <a href="https://twitter.com"><i class="fab fa-twitter-square fa-4x icon-cog" style="color:#ffffff"></i></a>
+        <a href="https://www.linkedin.com"><i class="fab fa-linkedin fa-4x icon-cog" style="color:#ffffff"></i></a>
+        <a href="https://www.facebook.com"><i class="fab fa-facebook-square fa-4x icon-cog"
+            style="color:#ffffff"></i></a>
+      </div>
+    </footer>
 
 
 
@@ -223,22 +301,22 @@
 
 
 
-  <!--jQuery 3.3.1 sin slim-->
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js"
-    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <!--jQuery 3.3.1 sin slim-->
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 
-  <!--Popper JS 1.14.3-->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
-    integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous">
-  </script>
+    <!--Popper JS 1.14.3-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
+      integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous">
+    </script>
 
-  <!--Bootstrap JS 4.2.1-->
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
-    integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous">
-  </script>
+    <!--Bootstrap JS 4.2.1-->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
+      integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous">
+    </script>
 
-  <!--Mi script-->
-  <script src="assets/js/script.js"></script>
+    <!--Mi script-->
+    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
