--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
           </span>
     </section>
 
-    <!-- typeform -->
+    <!--seccion #5 typeform -->
 
     <div class="container">
       <div class="typeform-widget" data-url="https://form.typeform.com/to/hwHXGe90" style="width: 100%; height: 500px;">
@@ -272,17 +272,17 @@
           href="https://admin.typeform.com/signup?utm_campaign=hwHXGe90&utm_source=typeform.com-01EFW7D7VN1DE4WASJWBRW30CH-free&utm_medium=typeform&utm_content=typeform-embedded-poweredbytypeform&utm_term=ES"
           style="color: #999" target="_blank">Typeform</a> </div>
     </div>
+    <!-- Seccion # 6 Footer -->
 
     <footer class="bg-purple text-center">
       <div>
-        <span class="texto2">Johan</span>
+        <span class="texto3">Johan</span>
       </div>
-      <div class="text-white">
-        <a href="https://github.com"><i class="fab fa-github-square fa-4x icon-cog" style="color:#ffffff"></i> </a>
-        <a href="https://twitter.com"><i class="fab fa-twitter-square fa-4x icon-cog" style="color:#ffffff"></i></a>
-        <a href="https://www.linkedin.com"><i class="fab fa-linkedin fa-4x icon-cog" style="color:#ffffff"></i></a>
-        <a href="https://www.facebook.com"><i class="fab fa-facebook-square fa-4x icon-cog"
-            style="color:#ffffff"></i></a>
+      <div class="text-white px-0 my-4">
+        <a href="https://github.com"><i class="fab fa-github-square fa-4x icon-cog mx-2" style="color:#ffffff"></i> </a>
+        <a href="https://twitter.com"><i class="fab fa-twitter-square fa-4x icon-cog mx-2" style="color:#ffffff"></i></a>
+        <a href="https://www.linkedin.com"><i class="fab fa-linkedin fa-4x icon-cog mx-2" style="color:#ffffff"></i></a>
+        <a href="https://www.facebook.com"><i class="fab fa-facebook-square fa-4x icon-cog mx-2" style="color:#ffffff"></i></a>
       </div>
     </footer>
 
