--- a/index.html
+++ b/index.html
@@ -239,11 +239,11 @@
     </section>
 
     <section class="container">
-        <div class="text-center texto4">
-          <span class="borde-n">
-              CONTACTAME
-              <div class="borde-n"></div>
-          </span>
+      <div class="text-center texto4">
+        <span class="borde-n">
+          CONTACTAME
+          <div class="borde-n"></div>
+        </span>
     </section>
 
     <!--seccion #5 typeform -->
@@ -280,9 +280,11 @@
       </div>
       <div class="text-white px-0 my-4">
         <a href="https://github.com"><i class="fab fa-github-square fa-4x icon-cog mx-2" style="color:#ffffff"></i> </a>
-        <a href="https://twitter.com"><i class="fab fa-twitter-square fa-4x icon-cog mx-2" style="color:#ffffff"></i></a>
+        <a href="https://twitter.com"><i class="fab fa-twitter-square fa-4x icon-cog mx-2"
+            style="color:#ffffff"></i></a>
         <a href="https://www.linkedin.com"><i class="fab fa-linkedin fa-4x icon-cog mx-2" style="color:#ffffff"></i></a>
-        <a href="https://www.facebook.com"><i class="fab fa-facebook-square fa-4x icon-cog mx-2" style="color:#ffffff"></i></a>
+        <a href="https://www.facebook.com"><i class="fab fa-facebook-square fa-4x icon-cog mx-2"
+            style="color:#ffffff"></i></a>
       </div>
     </footer>
 
