--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <section class="">
     <nav class="navbar navbar-expand-lg navbar-light bg-purple mr-auto fixed-top">
       <div class="container">
-        <a class="navbar-brand logo" href="#" style="color: #ffffff; font: size 40px;;">J</a>
+        <a class="navbar-brand logo" href="#" style="color: #ffffff; font: size 40px;;">JOHAN</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -37,16 +37,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link text-white" href="#">Sobre mi</a>
+              <a class="nav-link text-white" href="#about">Sobre mi</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#">Experiencia</a>
+              <a class="nav-link text-white" href="#exp">Experiencia</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#">Trabajos</a>
+              <a class="nav-link text-white" href="#work">Trabajos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#">Contacto</a>
+              <a class="nav-link text-white" href="#contact">Contacto</a>
             </li>
           </ul>
         </div>
@@ -72,7 +72,7 @@
 
 
   <!--Seccion #3 Sobre Mi -->
-  <section class="d-none d-sm-block d-none d-lg-block">
+  <section class="d-none d-sm-block d-none d-lg-block" id= about>
     <h2 class="text-center txt">SOBRE MÍ</h2>
     <div class="borde-n"></div>
     <div class="parra text-center">
@@ -108,9 +108,9 @@
       </div>
     </div>
   </section>
-  <!--Seccion #3 Mi Experiencia-->
+  <!--Seccion #3.1 Mi Experiencia-->
 
-  <section class="container">
+  <section class="container-fluid" id="exp">
     <div class="text-center texto4">
       <span>
         MI EXPERIENCIA
@@ -149,7 +149,7 @@
       </div>
     </div>
     <!--Seccion #4 Mis Trabajos-->
-    <section class="container-fluid bg-purple my-5">
+    <section class="container-fluid bg-purple my-5" id="work">
       <div class="text-center texto3">
         <span>
           MIS ÚLTIMOS <br> TRABAJOS
@@ -238,15 +238,15 @@
       </div>
     </section>
 
-    <section class="container">
+    <!--seccion #5 typeform -->
+
+    <section class="container" id="contact">
       <div class="text-center texto4">
-        <span class="borde-n">
+        <span>
           CONTACTAME
           <div class="borde-n"></div>
         </span>
     </section>
-
-    <!--seccion #5 typeform -->
 
     <div class="container">
       <div class="typeform-widget" data-url="https://form.typeform.com/to/hwHXGe90" style="width: 100%; height: 500px;">
@@ -276,15 +276,17 @@
 
     <footer class="bg-purple text-center">
       <div>
-        <span class="texto3">Johan</span>
+        <span class="logo">JOHAN</span>
       </div>
       <div class="text-white px-0 my-4">
-        <a href="https://github.com"><i class="fab fa-github-square fa-4x icon-cog mx-2" style="color:#ffffff"></i> </a>
-        <a href="https://twitter.com"><i class="fab fa-twitter-square fa-4x icon-cog mx-2"
-            style="color:#ffffff"></i></a>
-        <a href="https://www.linkedin.com"><i class="fab fa-linkedin fa-4x icon-cog mx-2" style="color:#ffffff"></i></a>
-        <a href="https://www.facebook.com"><i class="fab fa-facebook-square fa-4x icon-cog mx-2"
-            style="color:#ffffff"></i></a>
+        <a href="https://github.com"><i class="fab fa-github-square fa-4x icon-cog mx-2" data-toggle="tooltip"
+            data-placement="bottom" title="Github" style="color:#ffffff"></i> </a>
+        <a href="https://twitter.com"><i class="fab fa-twitter-square fa-4x icon-cog mx-2" data-toggle="tooltip"
+            data-placement="bottom" title="Twitter" style="color:#ffffff"></i></a>
+        <a href="https://www.linkedin.com"><i class="fab fa-linkedin fa-4x icon-cog mx-2" data-toggle="tooltip"
+            data-placement="bottom" title="Linkedin" style="color:#ffffff"></i></a>
+        <a href="https://www.facebook.com"><i class="fab fa-facebook-square fa-4x icon-cog mx-2" data-toggle="tooltip"
+            data-placement="bottom" title="Facebook" style="color:#ffffff"></i></a>
       </div>
     </footer>
 
